# wc-terminal

./: .gitattributes  README.md  terminal-gh.mov
broker/: Cargo.toml  Makefile  codegen.toml  naryfs.smithy
broker/src/: lib.rs  naryfs.rs
nary_fs/: Makefile  codegen.toml  gen.go  go.mod  go.sum  helpers.go  nary_fs.go  naryfs.smithy
ui/: .env.production  Cargo.toml  Makefile  build.rs  index.html  lib.rs  main.js  package-lock.json  package.json  tailwind.config.cjs
