[package]
name = "termui"
version = "0.1.0"
authors = [ "jordan-rash" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "termui"
path = "lib.rs"

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
form_urlencoded = "1.1.0"
wasmbus-rpc = "0.10.1"
wasmcloud-interface-logging = "0.7.0"
rust-embed = "6.4.1"
mime_guess = "2.0.4"
wasmcloud-interface-httpserver = "0.7.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
